white space fixed, nav items moved to the right

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,6 +52,10 @@ float: right;
 font-weight: bold;
 }
 
+#navbar li a {
+    float: right;
+}
+
 .lip-container{
 padding: 0;
 margin: 0;
@@ -142,7 +146,7 @@ padding: 20px;
 }
 /*page dividers*/
 .page-divider {
-    width: 75px;
+    
     height: 5px;
     border: 0;
     margin-top: 50px;
@@ -180,7 +184,6 @@ color: black;
 .row {
 display: flex;
 flex-wrap: wrap;
-padding: o 4px;
 }
 
 .column {
